Home Page Header and Overlay see CSS changes

--- a/Gelfand_Site.css
+++ b/Gelfand_Site.css
@@ -1,16 +1,61 @@
-.Quick_links{
-    text-decoration:none; 
-    display: inline-block;
-    color: black;
-}
-
-.Spacing {
-    display: inline-block; 
-    color: black;
-}
-
-.square {
-    height: 50px;
-    width: 50px;
-    background-color: #08B865;
+body {
+    font-family: Arial, Helvetica, sans-serif;
+    background-color: lightblue;
+  }
+  
+  /*Overlay*/
+  .overlay {
+    height: 0; /*No height comes from top*/
+    width: 100%; /*Width comes from top*/
+    position: fixed;
+    z-index: 1;
+    top: 0;
+    left: 0;
+    background-color: rgb(0,0,0); /*Color of drop*/
+    background-color: rgba(0,0,0, 0.9); /*With opaticy*/
+    overflow-x: hidden;
+    overflow-y: hidden;
+    transition: 0.5s;
+  }
+  
+  /*How the content is postioned in overlay*/
+  .overlay-content {
+    position: relative;
+    top: 25%;
+    width: 100%;
+    text-align: center;
+    margin-top: 30px;
+  }
+  
+  /*How the links will look inside the display*/
+  .overlay a {
+    padding: 8px;
+    text-decoration: none;
+    font-size: 36px;
+    color: lightslategray;
+    display: block;
+    transition: 0.3s;
+  }
+  
+  /*On mouse hover changes style of links*/
+  .overlay a:hover, .overlay a:focus {
+    color: ghostwhite;
+  }
+  
+  /*Where the close button while be*/
+  .overlay .closebtun {
+    position: absolute;
+    top: 20px;
+    right: 45px;
+    font-size: 60px;
+  }
+  
+  /*Some test stuff for if the height of the screen is lesst than 450px*/
+  @media screen and (max-height: 450px) {
+    .overlay a {font-size: 20px}
+    .overlay .closebtn {
+    font-size: 40px;
+    top: 15px;
+    right: 35px;
+    }
   }
