1 change with home link

--- a/Gelfand_Site.css
+++ b/Gelfand_Site.css
@@ -22,10 +22,16 @@
   }
   #headerBlock p
   {
-    text-decoration: none; 
     font-size: 2em; 
     margin: 30px;
   }
+  
+  #headerBlock a
+  {
+    text-decoration: none; 
+
+  }
+
   #headerBlock span
   {
     font-size: 30px;
