media for 820px 4 left

--- a/css/Gelfand_Site.css
+++ b/css/Gelfand_Site.css
@@ -272,13 +272,53 @@
     }
   }
 
-/*ipad air, surface pro 7, surface pro, surface duo, nest hub, nest hub max*/
+/*surface pro 7, surface duo, nest hub, nest hub max*/
 
 /*1280 px*/
 
-/*820 px or ipad air*/
-
 /*912 px or surface pro*/
+
+/*820 px or ipad air*/
+@media screen and (max-width:821px){
+    .imageright
+  {
+    width: 250px;
+    height: 150px;
+  }
+
+  .imageleft
+  {
+    width: 250px;
+    height: 150px;
+  }
+
+  .block1 
+  {
+    margin: 2em;
+    width: 300px;
+    height: 150px;
+    font-size: 1em;
+    display: inline-block;
+  }
+
+
+  .logoFooter{
+    display: none;
+  }
+
+  .footer-info
+  {
+    margin-right: 2rem;
+  }
+
+
+  .footer-info a
+  {
+    margin-bottom: 1rem;
+    margin-right: 3rem;
+  }
+
+}
 
   /*768 px or ipad mini*/
   @media screen and (max-width:769px){
@@ -303,21 +343,6 @@
     display: inline-block;
   }
 
-  .block2 {
-    margin: 2em;
-    width: 300px;
-    height: 150px;
-    font-size: 1em;
-    display: inline-block;
-  }
-
-  .block3 {
-    margin: 2em;
-    width: 300px;
-    height: 150px;
-    font-size: 1em;
-    display: inline-block;
-  }
 
   .logoFooter{
     display: none;
@@ -339,175 +364,130 @@
 
 /*415px and below*/
 @media screen and (max-width:415px){
-  .imageright
-{
-  display: none;
-}
+    .imageright
+  {
+    display: none;
+  }
 
-.imageleft
-{
-  display: none;
-}
+  .imageleft
+  {
+    display: none;
+  }
 
-.block1 
-{
-  margin: 2em;
-  width: 300px;
-  height: 150px;
-  font-size: 1em;
-  display: inline-block;
-}
-
-.block2 {
-  margin: 2em;
-  width: 300px;
-  height: 150px;
-  font-size: 1em;
-  display: inline-block;
-}
-
-.block3 {
-  margin: 2em;
-  width: 300px;
-  height: 150px;
-  font-size: 1em;
-  display: inline-block;
-}
-
-.logoFooter{
-  display: none;
-}
-
-.footer-info
-{
-  margin-right: 2rem;
-}
+  .block1 
+  {
+    margin: 2em;
+    width: 300px;
+    height: 150px;
+    font-size: 1em;
+    display: inline-block;
+  }
 
 
-.footer-info a
-{
-  margin-bottom: 1rem;
-  margin-right: 3rem;
-}
+  .logoFooter{
+    display: none;
+  }
+
+  .footer-info
+  {
+    margin-right: 2rem;
+  }
+
+
+  .footer-info a
+  {
+    margin-bottom: 1rem;
+    margin-right: 3rem;
+  }
 
 }
 
 /*360 px*/
 @media screen and (max-width:361px){
-  .imageright
-{
-  display: none;
-}
+    .imageright
+  {
+    display: none;
+  }
 
-.imageleft
-{
-  display: none;
-}
+  .imageleft
+  {
+    display: none;
+  }
 
-.block1 
-{
-  margin: 1em;
-  width: 300px;
-  height: 150px;
-  font-size: 1em;
-  display: inline-block;
-}
-
-.block2 {
-  margin: 1em;
-  width: 300px;
-  height: 150px;
-  font-size: 1em;
-  display: inline-block;
-}
-
-.block3 {
-  margin: 1em;
-  width: 300px;
-  height: 150px;
-  font-size: 1em;
-  display: inline-block;
-}
-
-.logoFooter{
-  display: none;
-}
-
-.footer-info
-{
-  margin-right: 2rem;
-}
+  .block1 
+  {
+    margin: 1em;
+    width: 300px;
+    height: 150px;
+    font-size: 1em;
+    display: inline-block;
+  }
 
 
-.footer-info a
-{
-  margin-bottom: 1rem;
-  margin-right: 3rem;
-}
+  .logoFooter{
+    display: none;
+  }
+
+  .footer-info
+  {
+    margin-right: 2rem;
+  }
+
+
+  .footer-info a
+  {
+    margin-bottom: 1rem;
+    margin-right: 3rem;
+  }
 
 }
 
 /*280 px or galaxy fold*/
 @media screen and (max-width:281px){
-  .imageright
-{
-  display: none;
-}
+    .imageright
+  {
+    display: none;
+  }
 
-.imageleft
-{
-  display: none;
-}
+  .imageleft
+  {
+    display: none;
+  }
 
-.block1 
-{
-  width: 250px;
-  height: 150px;
-  font-size: 1em;
-  display: inline-block;
-}
+  .block1 
+  {
+    width: 250px;
+    height: 150px;
+    font-size: 1em;
+    display: table;
+  }
 
-.block2 {
-  width: 250px;
-  height: 150px;
-  font-size: 1em;
-  display: inline-block;
-}
+  .logoFooter{
+    display: none;
+  }
 
-.block3 {
-  width: 250px;
-  height: 150px;
-  font-size: 1em;
-  display: inline-block;
-  
-}
-
-.logoFooter{
-  display: none;
-}
-
-.footer-info
-{
-  margin-right: 2rem;
-}
+  .footer-info
+  {
+    margin-right: 2rem;
+  }
 
 
-.footer-info a
-{
-  margin-bottom: 1rem;
-  margin-right: 3rem;
-}
+  .footer-info a
+  {
+    margin-bottom: 1rem;
+    margin-right: 3rem;
+  }
 
-.intro-text{
-  font-size: 1em;
-}
+  .intro-text{
+    font-size: 1em;
+  }
 
-.intro {
-    height: 300px;
-}
+  .intro {
+      height: 300px;
+  }
 
-.button{
-  font-size: 10px;
-}
+  .button{
+    font-size: 10px;
+  }
 
 }
