--- a/css/Gelfand_Site.css
+++ b/css/Gelfand_Site.css
@@ -131,19 +131,6 @@
     display: inline-block;
   }
 
-  .block2 {
-    margin: 2em;
-    width: 600px;
-    font-size: 2em;
-    display: inline-block
-  }
-
-  .block3 {
-    margin: 2em;
-    width: 500px;
-    font-size: 2em;
-    display: inline-block
-  }
   
   .imageright
   {
@@ -272,11 +259,121 @@
     }
   }
 
-/*surface pro 7, surface duo, nest hub, nest hub max*/
 
 /*1280 px*/
+@media screen and (max-width:1281px){
+  .imageright
+{
+  width: 400px;
+  height: 350px;
+}
+
+.imageleft
+{
+  width: 400px;
+  height: 350px;
+}
+
+.block1{
+  margin-left: 75px;
+}
+
+.footer-info
+{
+  margin-right: 2rem;
+}
+
+
+.footer-info a
+{
+  margin-bottom: 1rem;
+  margin-right: 3rem;
+}
+
+}
+
+/*1024 px*/
+@media screen and (max-width:1025px){
+  .imageright
+{
+  width: 400px;
+  height: 150px;
+}
+
+.imageleft
+{
+  width: 400px;
+  height: 150px;
+  margin-right: 75px;
+}
+
+.block1 
+{
+  margin-left: 55px;
+  width: 400px;
+  height: 150px;
+  font-size: 1em;
+  display: inline-block;
+}
+
+.logoFooter{
+  display: none;
+}
+
+.footer-info
+{
+  margin-right: 2rem;
+}
+
+
+.footer-info a
+{
+  margin-bottom: 1rem;
+  margin-right: 3rem;
+}
+
+}
 
 /*912 px or surface pro*/
+@media screen and (max-width:913px){
+  .imageright
+{
+  width: 300px;
+  height: 150px;
+}
+
+.imageleft
+{
+  width: 275px;
+  height: 150px;
+}
+
+.block1 
+{
+  width: 400px;
+  height: 150px;
+  font-size: 1em;
+  display: inline-block;
+}
+
+
+.logoFooter{
+  display: none;
+}
+
+.footer-info
+{
+  margin-right: 2rem;
+}
+
+
+.footer-info a
+{
+  margin-bottom: 1rem;
+  margin-right: 3rem;
+}
+
+}
 
 /*820 px or ipad air*/
 @media screen and (max-width:821px){
@@ -290,11 +387,12 @@
   {
     width: 250px;
     height: 150px;
+    margin-right: 125px;
   }
 
   .block1 
   {
-    margin: 2em;
+    margin-left: 50px;
     width: 300px;
     height: 150px;
     font-size: 1em;
@@ -330,13 +428,12 @@
 
   .imageleft
   {
-    width: 250px;
+    width: 200px;
     height: 150px;
   }
 
   .block1 
   {
-    margin: 2em;
     width: 300px;
     height: 150px;
     font-size: 1em;
@@ -359,6 +456,56 @@
     margin-bottom: 1rem;
     margin-right: 3rem;
   }
+
+}
+
+/*540px and below*/
+@media screen and (max-width:541px){
+  .imageright
+{
+  display: none;
+}
+
+.imageleft
+{
+  display: none;
+}
+
+.block1 
+{ 
+  margin-left: 75px;
+  width: 400px;
+  height: 150px;
+  font-size: 1em;
+  display: inline-block;
+}
+
+
+.logoFooter{
+  display: none;
+  font-size: 1rem;
+}
+
+.footer-info
+{
+  margin-right: 2rem;
+}
+
+
+.footer-info a
+{
+  margin-bottom: 1rem;
+  margin-right: 3rem;
+}
+
+.footer{
+  font-size: small;
+  display: table;
+}
+
+.button{
+  display: table;
+}
 
 }
 
@@ -416,7 +563,7 @@
 
   .block1 
   {
-    margin: 1em;
+    margin-bottom: 50px;
     width: 300px;
     height: 150px;
     font-size: 1em;
@@ -456,6 +603,7 @@
 
   .block1 
   {
+    margin-left: 20px;
     width: 250px;
     height: 150px;
     font-size: 1em;
