--- a/css/Gelfand_Site.css
+++ b/css/Gelfand_Site.css
@@ -102,16 +102,6 @@
     font-size: 60px;
   }
   
-  /*Some test stuff for if the height of the screen is less than 450px*/
-  @media screen and (max-height: 450px) 
-  {
-    .overlay a {font-size: 20px}
-    .overlay .closebtn {
-    font-size: 40px;
-    top: 15px;
-    right: 35px;
-    }
-  }
 
 
   /* page body below---------------------*/
@@ -123,14 +113,130 @@
     background-color: #cecdc8;
   }
 
-  .block1 
-  {
-    margin: 2em;
+  .block1-content {
+    margin: 3em;
     width: 600px;
     height: 300px;
-    font-size: 2em;
+    font-size: 1.5em;
     display: inline-block;
   }
+
+  .block1-content h2
+  {
+    font-size: larger;
+    word-spacing: 2px;
+    margin-left: 3.5em;
+
+  }
+  
+
+  .block1-content p
+  {
+    font-size: medium;
+    word-spacing: 2px;
+    width: 400px;
+    margin-left: 6em;
+  }
+
+
+
+  .block2
+  {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    margin: 20px 0px;
+    flex-wrap: wrap;
+  }
+  .box1
+  {
+    width: 350px;
+    background-color: white;
+    border: 1px solid grey;
+    margin: 20px;
+  }
+
+  .box1-image
+  {
+    width: 100%;
+    height: auto;
+  }
+
+  .box1-image img
+  {
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+    object-position: center;
+  }
+  .box1-content
+  {
+    padding: 30px;
+    display: flex;
+    flex-direction: column;
+  }
+
+  .box1-content span
+  {
+    color: pink;
+    font-size: 0.9rem;
+  }
+
+  .box1-content .box1-title
+  {
+    font-size: 1.3rem;
+    font-weight: 500;
+    color: black;
+  }
+
+  .box1-content .box1-title:hover
+  {
+    color: red;
+    transition: all ease 0.3s;
+  }
+
+  .box1-content p
+  {
+    color: yellow;
+    font-size: 0.9rem;
+    display: -webkit-box;
+    -webkit-line-clamp: 3;
+    -webkit-box-orient: vertical;
+    overflow: hidden;
+    text-overflow: ellipsis;
+    margin: 20px 0px;
+  }
+
+  .box1-content a
+  {
+    color: black;
+  }
+  .box1-content a:hover
+  {
+    color: red;
+    transition: all ease 0.3s;
+  }
+
+
+
+  .block3-content
+  {
+    margin: 3em;
+    margin-top: 6em;
+    width: 600px;
+    height: 300px;
+    font-size: 1.5em;
+    display: inline-block;
+  }
+
+  .block3-content p
+  {
+    font-size: medium;
+    word-spacing: 2px;
+    width: 400px;
+    margin-left: 6em;
+  }
+  
 
   
   .imageright
@@ -139,6 +245,8 @@
     margin: 30px 60px;
     width: 500px;
     height: 350px;
+    margin-right: 4em;
+    margin-top: 4em;
   }
 
   .imageleft
@@ -147,6 +255,7 @@
     margin: 30px 60px;
     width: 500px;
     height: 350px;
+    margin-top: 6em;
   }
 
   .button{
@@ -235,414 +344,4 @@
     color: #5a8fc7;
     transition: 0.1s ease-out;
     text-decoration: underline;
-  }
-
-  /* Screen Sie differences for footer-------------*/
-  @media screen and (max-width: 1150px) 
-  {
-    .footer
-    {
-      height: 60vh;
-    }
-  }
-
-  @media screen and (max-width: 820px) 
-  {
-    .footer
-    {
-      padding-top: 1rem;
-    }
-  }
-
-  @media screen and (max-width: 720px) 
-  {
-    .footer
-    {
-      padding-bottom: 1rem;
-    }
-  }
-
-
-  /*1280 px*/
-  @media screen and (max-width:1281px){
-    .imageright
-  {
-    width: 400px;
-    height: 350px;
-  }
-
-  .imageleft
-  {
-    width: 400px;
-    height: 350px;
-  }
-
-  .block1{
-    margin-left: 75px;
-  }
-
-  .footer-info
-  {
-    margin-right: 2rem;
-  }
-
-
-  .footer-info a
-  {
-    margin-bottom: 1rem;
-    margin-right: 3rem;
-  }
-
-  }
-
-  /*1024 px*/
-  @media screen and (max-width:1025px)
-  {
-    .imageright
-    {
-      width: 400px;
-      height: 150px;
-    }
-
-    .imageleft
-    {
-      width: 400px;
-      height: 150px;
-      margin-right: 75px;
-    }
-
-    .block1 
-    {
-      margin-left: 55px;
-      width: 400px;
-      height: 150px;
-      font-size: 1em;
-      display: inline-block;
-    }
-
-    .logoFooter{
-      display: none;
-    }
-
-    .footer-info
-    {
-      margin-right: 2rem;
-    }
-
-
-    .footer-info a
-    {
-      margin-bottom: 1rem;
-      margin-right: 3rem;
-    }
-
-  }
-
-  /*912 px or surface pro*/
-  @media screen and (max-width:913px){
-    .imageright
-  {
-    width: 300px;
-    height: 150px;
-  }
-
-  .imageleft
-  {
-    width: 275px;
-    height: 150px;
-  }
-
-  .block1 
-  {
-    width: 400px;
-    height: 150px;
-    font-size: 1em;
-    display: inline-block;
-  }
-
-
-  .logoFooter{
-    display: none;
-  }
-
-  .footer-info
-  {
-    margin-right: 2rem;
-  }
-
-
-  .footer-info a
-  {
-    margin-bottom: 1rem;
-    margin-right: 3rem;
-  }
-
-  }
-
-  /*820 px or ipad air*/
-  @media screen and (max-width:821px){
-      .imageright
-    {
-      width: 250px;
-      height: 150px;
-    }
-
-    .imageleft
-    {
-      width: 250px;
-      height: 150px;
-      margin-right: 125px;
-    }
-
-    .block1 
-    {
-      margin-left: 50px;
-      width: 300px;
-      height: 150px;
-      font-size: 1em;
-      display: inline-block;
-    }
-
-
-    .logoFooter{
-      display: none;
-    }
-
-    .footer-info
-    {
-      margin-right: 2rem;
-    }
-
-
-    .footer-info a
-    {
-      margin-bottom: 1rem;
-      margin-right: 3rem;
-    }
-
-  }
-
-    /*768 px or ipad mini*/
-    @media screen and (max-width:769px){
-      .imageright
-    {
-      width: 250px;
-      height: 150px;
-    }
-
-    .imageleft
-    {
-      width: 200px;
-      height: 150px;
-    }
-
-    .block1 
-    {
-      width: 300px;
-      height: 150px;
-      font-size: 1em;
-      display: inline-block;
-    }
-
-
-    .logoFooter{
-      display: none;
-    }
-
-    .footer-info
-    {
-      margin-right: 2rem;
-    }
-
-    
-    .footer-info a
-    {
-      margin-bottom: 1rem;
-      margin-right: 3rem;
-    }
-
-  }
-
-  /*540px and below*/
-  @media screen and (max-width:541px)
-  {
-    .imageright
-    {
-      display: none;
-    }
-
-    .imageleft
-    {
-      display: none;
-    }
-
-    .block1 
-    { 
-      margin-left: 75px;
-      width: 400px;
-      height: 150px;
-      font-size: 1em;
-      display: inline-block;
-    }
-
-
-    .logoFooter{
-      display: none;
-      font-size: 1rem;
-    }
-
-    .footer-info
-    {
-      margin-right: 2rem;
-    }
-
-
-    .footer-info a
-    {
-      margin-bottom: 1rem;
-      margin-right: 3rem;
-    }
-
-    .footer{
-      font-size: small;
-      display: table;
-    }
-
-    .button{
-      display: table;
-    }
-
-  }
-
-  /*415px and below*/
-  @media screen and (max-width:415px)
-  {
-    .imageright
-    {
-      display: none;
-    }
-
-    .imageleft
-    {
-      display: none;
-    }
-
-    .block1 
-    {
-      margin: 2em;
-      width: 300px;
-      height: 150px;
-      font-size: 1em;
-      display: inline-block;
-    }
-
-
-    .logoFooter{
-      display: none;
-    }
-
-    .footer-info
-    {
-      margin-right: 2rem;
-    }
-
-
-    .footer-info a
-    {
-      margin-bottom: 1rem;
-      margin-right: 3rem;
-    }
-
-  }
-
-  /*360 px*/
-  @media screen and (max-width:361px)
-  {
-      .imageright
-    {
-      display: none;
-    }
-
-    .imageleft
-    {
-      display: none;
-    }
-
-    .block1 
-    {
-      margin-bottom: 50px;
-      width: 300px;
-      height: 150px;
-      font-size: 1em;
-      display: inline-block;
-    }
-
-
-    .logoFooter{
-      display: none;
-    }
-
-    .footer-info
-    {
-      margin-right: 2rem;
-    }
-
-
-    .footer-info a
-    {
-      margin-bottom: 1rem;
-      margin-right: 3rem;
-    }
-
-  }
-
-  /*280 px or galaxy fold*/
-  @media screen and (max-width:281px){
-      .imageright
-    {
-      display: none;
-    }
-
-    .imageleft
-    {
-      display: none;
-    }
-
-    .block1 
-    {
-      margin-left: 20px;
-      width: 250px;
-      height: 150px;
-      font-size: 1em;
-      display: table;
-    }
-
-    .logoFooter{
-      display: none;
-    }
-
-    .footer-info
-    {
-      margin-right: 2rem;
-    }
-
-
-    .footer-info a
-    {
-      margin-bottom: 1rem;
-      margin-right: 3rem;
-    }
-
-    .intro-text{
-      font-size: 1em;
-    }
-
-    .intro {
-        height: 300px;
-    }
-
-    .button{
-      font-size: 10px;
-    }
-
   }
